--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>My Simple E‑commerce</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<style>
 		/* page-specific helpers */
 		.hero {
-			background: linear-gradient(135deg, #f0f4ff, #e8f7ff);
+			background: linear-gradient(135deg, #e2f5e9, #f7fffb);
 		}
 		.product-card img {
 			object-fit: cover;
@@ -77,7 +80,7 @@
 		}
 		
 		.toast-notification {
-			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			background: linear-gradient(135deg, #1c8f5c 0%, #25a76d 100%);
 			color: white;
 			padding: 15px 20px;
 			border-radius: 10px;
@@ -88,15 +91,15 @@
 		}
 		
 		.toast-notification.success {
-			background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
+			background: linear-gradient(135deg, #1c8f5c 0%, #119c54 100%);
 		}
 		
 		.toast-notification.error {
-			background: linear-gradient(135deg, #eb3349 0%, #f45c43 100%);
+			background: linear-gradient(135deg, #e63946 0%, #f3722c 100%);
 		}
 		
 		.toast-notification.info {
-			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			background: linear-gradient(135deg, #1c8f5c 0%, #0c6a3b 100%);
 		}
 		
 		/* Confetti container */
@@ -120,7 +123,7 @@
 		
 		/* Login/Register success effects */
 		.welcome-banner {
-			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			background: linear-gradient(135deg, #1c8f5c 0%, #25a76d 100%);
 			color: white;
 			padding: 20px;
 			border-radius: 10px;
@@ -203,18 +206,63 @@
 
 		<!-- Products -->
 		<section id="view-products" class="view" style="display:none;">
-			<div class="d-flex justify-content-between align-items-center mb-3">
-				<h2 class="h4 mb-0">Products</h2>
-			</div>
-			<div class="row mb-3">
-				<div class="col-md-6 mb-2">
-					<input type="text" id="product-search" class="form-control" placeholder="Search products..." />
+			<div class="products-hero rounded-4 p-4 p-lg-5 mb-4">
+				<div class="row g-4 align-items-center">
+					<div class="col-lg-7">
+						<p class="eyebrow text-uppercase mb-2">Curated catalog</p>
+						<h2 class="display-6 fw-semibold mb-3">Products</h2>
+						<p class="text-muted mb-0">
+							A minimal, distraction-free browsing experience. Search by name, focus a category, or sort by price to reach the right item faster.
+						</p>
+					</div>
+					<div class="col-lg-5">
+						<div class="d-flex flex-wrap gap-3">
+							<div class="stat-pill">
+								<span class="stat-label">Avg. rating</span>
+								<strong>4.8 / 5</strong>
+							</div>
+							<div class="stat-pill">
+								<span class="stat-label">Free returns</span>
+								<strong>30 days</strong>
+							</div>
+							<div class="stat-pill">
+								<span class="stat-label">Carbon neutral</span>
+								<strong>Shipping</strong>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="col-md-6 mb-2">
-					<input type="text" id="product-category-filter" class="form-control" placeholder="Filter by category..." />
+			</div>
+
+			<div class="card product-filter-card border-0 shadow-sm mb-4">
+				<div class="card-body">
+					<div class="row g-3 align-items-end">
+						<div class="col-lg-5">
+							<label class="form-label small text-uppercase fw-semibold">Search</label>
+							<input type="text" id="product-search" class="form-control form-control-lg" placeholder="Search products..." />
+						</div>
+						<div class="col-lg-4">
+							<label class="form-label small text-uppercase fw-semibold">Category</label>
+							<input type="text" id="product-category-filter" class="form-control form-control-lg" placeholder="Try “Laptop”, “Accessories”, …" />
+						</div>
+						<div class="col-lg-3">
+							<label class="form-label small text-uppercase fw-semibold">Sort</label>
+							<select id="product-sort" class="form-select form-select-lg">
+								<option value="featured">Featured</option>
+								<option value="price-asc">Price: Low to High</option>
+								<option value="price-desc">Price: High to Low</option>
+								<option value="stock-desc">Stock: High to Low</option>
+							</select>
+						</div>
+						<div class="col-12 d-flex justify-content-between flex-wrap gap-2">
+							<small class="text-muted">Tip: combine search + category for faster discovery.</small>
+							<button type="button" class="btn btn-link text-decoration-none p-0 fw-semibold" id="product-reset">Reset filters</button>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div id="product-list" class="row g-3"></div>
+
+			<div id="product-list" class="row g-4"></div>
 		</section>
 
 		<!-- Cart -->
@@ -240,14 +288,84 @@
 
 		<!-- About -->
 		<section id="view-about" class="view" style="display:none;">
-			<h2 class="h4 mb-3">About Us</h2>
-			<div class="card card-body">
-				<p>
-					Welcome to Hans Shop, your ultimate destination for all things tech! We’re passionate about connecting people with the latest innovations that make life smarter, faster, and more exciting. From cutting-edge gadgets and high-performance devices to everyday tech essentials, our mission is to bring the future to your fingertips. We believe technology should be accessible, reliable, and inspiring—helping you stay ahead in an ever-changing digital world. Our team is made up of tech enthusiasts who live and breathe innovation, ensuring every product we offer meets our high standards of quality, performance, and style. Whether you’re a gamer looking for top-tier gear, a professional upgrading your workspace, or just someone who loves exploring new tech, we’ve got something just for you. At Hans Shop, we don’t just sell technology—we empower you to experience the future today.
-				</p>
-				<p class="mb-0">
-					Built for learning and quick prototyping. Customize the products, branding, and content to make it yours.
-				</p>
+			<div class="about-hero rounded-4 p-4 p-lg-5 mb-4">
+				<div class="row g-4 align-items-center">
+					<div class="col-lg-7">
+						<p class="eyebrow text-uppercase mb-2">About Hans Shop</p>
+						<h2 class="display-6 fw-semibold mb-3">We design calmer shopping moments for tech lovers.</h2>
+						<p class="text-muted mb-4">
+							Hans Shop started as a weekend prototype to make discovering quality gadgets less overwhelming. Today, we craft curated drops, human support, and thoughtful UX so every interaction feels intentional and clutter-free.
+						</p>
+						<div class="d-flex flex-wrap gap-3">
+							<div class="about-pill">
+								<span class="stat-label">Founded</span>
+								<strong>2023</strong>
+							</div>
+							<div class="about-pill">
+								<span class="stat-label">Products curated</span>
+								<strong>320+</strong>
+							</div>
+							<div class="about-pill">
+								<span class="stat-label">Community</span>
+								<strong>15K+ shoppers</strong>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-5">
+						<div class="about-stats-card p-4">
+							<p class="text-uppercase small fw-semibold text-muted mb-3">What drives the project</p>
+							<ul class="about-list mb-4">
+								<li>Transparent pricing & stock visibility</li>
+								<li>Research-backed product picks</li>
+								<li>Friendly support in under 2 hours</li>
+							</ul>
+							<div class="d-flex gap-4 flex-wrap">
+								<div>
+									<p class="display-6 fw-semibold mb-0 text-primary">92%</p>
+									<small class="text-muted">Repeat purchase rate</small>
+								</div>
+								<div>
+									<p class="display-6 fw-semibold mb-0 text-primary">48 hr</p>
+									<small class="text-muted">Avg. fulfillment</small>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row g-4">
+				<div class="col-md-4">
+					<div class="about-grid-card h-100 p-4">
+						<p class="eyebrow mb-2">Vision</p>
+						<h5 class="fw-semibold mb-3">A trusted hub for mindful tech ownership.</h5>
+						<p class="text-muted mb-0">
+							We imagine an ecommerce space where every gadget is vetted for longevity, sustainability, and actual usefulness—no hype, just products that elevate daily rituals.
+						</p>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="about-grid-card h-100 p-4">
+						<p class="eyebrow mb-2">Mission</p>
+						<h5 class="fw-semibold mb-3">Humanize digital shopping.</h5>
+						<ul class="about-list mb-0">
+							<li>Curate compact collections that solve real problems.</li>
+							<li>Guide shoppers with transparent specs, demos, and stories.</li>
+							<li>Deliver joyful packaging and proactive support.</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="about-grid-card h-100 p-4">
+						<p class="eyebrow mb-2">Goals</p>
+						<h5 class="fw-semibold mb-3">What we’re building this year.</h5>
+						<ul class="about-list mb-0">
+							<li>Launch a green logistics program with reusable mailers.</li>
+							<li>Publish quarterly impact reports for community trust.</li>
+							<li>Open-source our storefront starter kit for indie sellers.</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</section>
 
@@ -338,16 +456,32 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<div id="login-error" class="alert alert-danger d-none" role="alert"></div>
-					<div class="mb-2">
-						<input id="login-email" type="email" class="form-control" placeholder="Email" autocomplete="email" required />
-						<div class="invalid-feedback">Email is required. Please enter a valid email.</div>
+					<div class="auth-modal">
+						<div class="auth-copy">
+							<p class="eyebrow text-uppercase mb-2">Welcome back</p>
+							<h6 class="fw-semibold mb-2">Log in to keep shopping without friction.</h6>
+							<p class="text-muted small mb-3">Save your cart, track orders, and enjoy personalized recommendations.</p>
+							<ul class="auth-benefits">
+								<li>Faster checkout and synced carts</li>
+								<li>Order tracking & instant receipts</li>
+								<li>Priority support for members</li>
+							</ul>
+						</div>
+						<div class="auth-form">
+							<div id="login-error" class="alert alert-danger d-none" role="alert"></div>
+							<div class="mb-3">
+								<label for="login-email" class="form-label small text-uppercase fw-semibold">Email</label>
+								<input id="login-email" type="email" class="form-control form-control-lg" placeholder="your@email.com" autocomplete="email" required />
+								<div class="invalid-feedback">Email is required. Please enter a valid email.</div>
+							</div>
+							<div class="mb-3">
+								<label for="login-password" class="form-label small text-uppercase fw-semibold">Password</label>
+								<input id="login-password" type="password" class="form-control form-control-lg" placeholder="••••••••" autocomplete="current-password" required />
+								<div class="invalid-feedback">Password is required (min 6 characters).</div>
+							</div>
+							<small class="text-muted">Secure authentication powered by Hans Shop.</small>
+						</div>
 					</div>
-					<div class="mb-1">
-						<input id="login-password" type="password" class="form-control" placeholder="Password" autocomplete="current-password" required />
-						<div class="invalid-feedback">Password is required (min 6 characters).</div>
-					</div>
-					<small class="text-muted">Log in with your registered account.</small>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -367,28 +501,45 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<div id="register-error" class="alert alert-danger d-none" role="alert"></div>
-					<div class="mb-2">
-						<input id="register-name" type="text" class="form-control" placeholder="Full Name" required />
-						<div class="invalid-feedback">Name is required.</div>
+					<div class="auth-modal">
+						<div class="auth-copy">
+							<p class="eyebrow text-uppercase mb-2">Create account</p>
+							<h6 class="fw-semibold mb-2">A calmer way to shop smart.</h6>
+							<p class="text-muted small mb-3">Set up your profile in seconds and unlock curated drops, saved preferences, and faster delivery.</p>
+							<ul class="auth-benefits">
+								<li>Personalized product picks</li>
+								<li>Early access to limited drops</li>
+								<li>One-tap reorder histories</li>
+							</ul>
+						</div>
+						<div class="auth-form">
+							<div id="register-error" class="alert alert-danger d-none" role="alert"></div>
+							<div class="mb-3">
+								<label for="register-name" class="form-label small text-uppercase fw-semibold">Full name</label>
+								<input id="register-name" type="text" class="form-control form-control-lg" placeholder="Jane Dela Cruz" required />
+								<div class="invalid-feedback">Name is required.</div>
+							</div>
+							<div class="mb-3">
+								<label for="register-email" class="form-label small text-uppercase fw-semibold">Email</label>
+								<input id="register-email" type="email" class="form-control form-control-lg" placeholder="you@example.com" autocomplete="email" required />
+								<div class="invalid-feedback">Email is required. Please enter a valid email.</div>
+							</div>
+							<div class="mb-3">
+								<label for="register-password" class="form-label small text-uppercase fw-semibold">Password</label>
+								<input id="register-password" type="password" class="form-control form-control-lg" placeholder="At least 6 characters" autocomplete="new-password" required />
+								<div class="invalid-feedback">Password is required (min 6 characters).</div>
+							</div>
+							<div class="mb-3">
+								<label for="register-role" class="form-label small text-uppercase fw-semibold">Account type</label>
+								<select id="register-role" class="form-select form-select-lg" required>
+									<option value="User" selected>User</option>
+									<option value="Admin">Admin</option>
+								</select>
+								<small class="text-muted d-block mt-1" id="role-help-text">Select your account type. Admin accounts require special privileges.</small>
+							</div>
+							<small class="text-muted">By registering, you agree to our terms and conditions.</small>
+						</div>
 					</div>
-					<div class="mb-2">
-						<input id="register-email" type="email" class="form-control" placeholder="Email" autocomplete="email" required />
-						<div class="invalid-feedback">Email is required. Please enter a valid email.</div>
-					</div>
-					<div class="mb-2">
-						<input id="register-password" type="password" class="form-control" placeholder="Password (min 6 characters)" autocomplete="new-password" required />
-						<div class="invalid-feedback">Password is required (min 6 characters).</div>
-					</div>
-					<div class="mb-2">
-						<label for="register-role" class="form-label small">Account Type</label>
-						<select id="register-role" class="form-select" required>
-							<option value="User" selected>User</option>
-							<option value="Admin">Admin</option>
-						</select>
-						<small class="text-muted" id="role-help-text">Select your account type. Admin accounts require special privileges.</small>
-					</div>
-					<small class="text-muted">By registering, you agree to our terms and conditions.</small>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
